--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
     align-items: center;
     justify-content: center;
   }
+
+  .description {
+    text-transform: capitalize;
+  
+  }
+
   
   button {
     margin: 0.5em;
