--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     transition: 0.2s ease-in-out;
   }
   
-  input.search-bar {
+  input.search-city {
     border: none;
     outline: none;
     padding: 0.4em 1em;
