--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   }
   
   .card {
-    /* opacity: 0.5; */
+    opacity: 0.8;
     background-color: #222;
     color: white;
     padding: 2em;
